change example cfg

--- a/mdaserver.example.cfg
+++ b/mdaserver.example.cfg
@@ -12,5 +12,5 @@ mda_path = %(basepath)s/mdaserver/testdata
 mdachunk_data_path = %(basepath)s/mdaserver/mdachunk_data
 
 ; the url to the mdachunk_data_path
-mdachunk_data_url = http://your_hostname:%(port)s/mdachunk_data
+mdachunk_data_url = http://your_hostname:%(port)s
 
